# line-stamp-maker2

./: .gitignore  README.md  create_desktop_shortcut.bat  pyproject.toml  run.py  stamps.db  start.bat
.claude/: launch.json
app/: __init__.py  db.py  routes.py
app/services/: ai_finish.py  character_processor.py  chatgpt_ready.py  circle_crop.py  design_presets.py  face_detect.py  metadata.py  photo_enhance.py  photo_loader.py  planner.py  quality_check.py  review.py  stamp_generator.py  stamp_templates.py  stamp_themes.py  text_styles.py  validator.py
app/templates/: base.html  detail.html  export.html  index.html  new.html  planner.html  planner_preview.html
line_stamp_webapp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_ai_finish.py  test_application_package.py  test_character_processor.py  test_chatgpt_ready.py  test_circle_crop.py  test_count_and_editing.py  test_design_overrides.py  test_design_presets.py  test_face_detect.py  test_photo_enhance.py  test_photo_loader.py  test_planner.py  test_quality_check.py  test_routes.py  test_smart_crop.py  test_stamp_generator.py  test_stamp_templates.py  test_stamp_themes.py  test_text_styles.py  test_validator.py
