[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "line-stamp-webapp"
version = "0.1.0"
description = "LINE stamp generation web app integrated with photo-selector"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "pillow>=10.0",
    "numpy>=1.24",
    # Face detection (Haar cascade). Falls back to a NumPy skin-tone
    # heuristic if cv2 is unavailable, so this is functionally optional.
    "opencv-python-headless>=4.9",
]

[project.optional-dependencies]
# Install line-stamp-maker for high-quality segmentation:
#   pip install -e ../line-stamp-maker
full = [
    "mediapipe>=0.10",
    "opencv-python>=4.9",
    "pillow-heif>=0.16",
]
dev = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
